# kinect

./: CMakeLists.txt  README.md  main.cpp
_newclouds/: cloud001.pcd  cloud002.pcd  cloud003.pcd  cloud004.pcd  cloud006.pcd  cloud009.pcd  cloud010.pcd  cloud013.pcd  cloud014.pcd  cloud015.pcd  cloud016.pcd  cloud019.pcd  cloud026.pcd  cloud027.pcd  cloud028.pcd  cloud035.pcd  cloud038.pcd  cloud042.pcd  cloud044.pcd  cloud045.pcd  cloud048.pcd  cloud049.pcd  cloud051.pcd  cloud052.pcd  cloud054.pcd  cloud061.pcd  cloud063.pcd  cloud066.pcd  cloud068.pcd  cloud069.pcd  cloud070.pcd  cloud071.pcd  cloud072.pcd  cloud075.pcd  cloud079.pcd  cloud080.pcd  cloud081.pcd  cloud083.pcd  cloud084.pcd  cloud085.pcd  (+168 more)
processing_clouds/: CMakeLists.txt  main.cpp
saving_clouds/: CMakeLists.txt  save.cpp
stream_saving_clouds/: CMakeLists.txt  stream.cpp
